# mandel-plot

./: .gitignore  CMakeLists.txt
include/: argument_parse.hpp  canvas.hpp  claim_matrix.hpp  color.hpp  color_calculator.hpp  escape_constants.hpp  fractal_view.hpp  iteration_calculator.hpp  mandelbrot.hpp  parallel_calculator.hpp  simple_calculator.hpp
src/: CMakeLists.txt  argument_parse.cpp  canvas.cpp  claim_matrix.cpp  color.cpp  color_calculator.cpp  fractal_view.cpp  main.cpp  mandelbrot.cpp  parallel_calculator.cpp  simple_calculator.cpp
test/: CMakeLists.txt  dummy_test.cpp  test_argument_parse.cpp  test_canvas.cpp  test_claiming.cpp  test_color.cpp  test_color_calculator.cpp  test_mandelbrot_equation.cpp
